Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138871

ASSERT: QColorOutput::colorify: "It makes no sense to attempt to print an empty string."

XMLWordPrintable

    • 0b9a554ed (dev), c10971d5e (6.10), 085e8a0da (6.9), b103c7f4d (tqtc/lts-6.8)

      Running qmllint from qtdeclarative at bb09490ab8169c7c049ca476969598403bc84864 on the Thermostat example in qtdoc at dd98c982b60edbf07eb0db504a137c0e36383687 with PS1 of https://codereview.qt-project.org/c/qt/qtdoc/+/485381/1 triggers the crash.

      6  qAbort                                                                                                 qassert.cpp             46   0x7ffff6ee230e 
      7  qt_maybe_message_fatal<QString&>                                                                       qlogging.cpp            2168 0x7ffff6f1d5d4 
      8  qt_message(QtMsgType, const QMessageLogContext &, const char *, typedef __va_list_tag __va_list_tag *) qlogging.cpp            412  0x7ffff6f16fac 
      9  QMessageLogger::fatal                                                                                  qlogging.cpp            901  0x7ffff6f18b5e 
      10 qt_assert_x                                                                                            qassert.cpp             119  0x7ffff6ee23e1 
      11 QColorOutput::colorify                                                                                 qcoloroutput.cpp        287  0x7ffff7a3fc6b 
      12 QColorOutput::write                                                                                    qcoloroutput.cpp        239  0x7ffff7a3f3ed 
      13 QQmlJSLogger::printFix                                                                                 qqmljslogger.cpp        473  0x7ffff7c23519 
      14 QQmlJSLogger::log                                                                                      qqmljslogger.cpp        301  0x7ffff7c22292 
      15 QQmlJSLogger::log                                                                                      qqmljslogger_p.h        212  0x7ffff7b76126 
      16 operator()                                                                                             qqmljsimportvisitor.cpp 1234 0x7ffff7b5d1c4 
      17 QQmlJSImportVisitor::checkRequiredProperties                                                           qqmljsimportvisitor.cpp 1282 0x7ffff7b5da5a 
      18 QQmlJSImportVisitor::endVisit                                                                          qqmljsimportvisitor.cpp 603  0x7ffff7b57141 
      19 QQmlJS::AST::UiProgram::accept0                                                                        qqmljsast.cpp           1195 0x7ffff5c5d1bc 
      20 QQmlJS::AST::Node::accept                                                                              qqmljsast_p.h           272  0x7ffff7b2b352 
      21 QQmlJSTypeResolver::init                                                                               qqmljstyperesolver.cpp  191  0x7ffff7cb02e0 
      22 QQmlJSLinter::lintFile                                                                                 qqmljslinter.cpp        637  0x7ffff7bec152 
      23 main                                                                                                   main.cpp                433  0x55555555ec8f 

        For Gerrit Dashboard: QTBUG-138871
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            olivier.decanniere Olivier De Cannière
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes