QQmlJSLogger: Don't trigger assert in QColorOutput

As a comment already points out, having an empty replacement message is
possible. In that case, we shouldn't attempt to print it.

Add a dedicated test-setup for QQmlJSLogger, to make it easier to expand
tests there.

Pick-to: 6.8
Fixes: QTBUG-138871
Change-Id: I55c5de140fe8175e9deaca519bb734654dc366f4
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
(cherry picked from commit 0b9a554edee30f97a49aab2df022630cfe7be8df)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c10971d5eb48bfb7c116662ba07880cf35dcccaf)