src/qmlcompiler/qqmljslogger.cpp
@@ -447,7 +447,8 @@ void QQmlJSLogger::printFix(const QQmlJSFixSuggestion &fixItem)
     // But if there's nothing to change it cannot be auto-applied
     Q_ASSERT(!replacement.isEmpty() || !fixItem.isAutoApplicable());
 
-    m_output.write(replacementString, QtDebugMsg);
+    if (!replacementString.isEmpty())
+        m_output.write(replacementString, QtDebugMsg);
     m_output.write(issueLocationWithContext.afterText().toString() + u'\n');
 
     int tabCount = issueLocationWithContext.beforeText().count(u'\t');
